Fix: Text Align broken, fixed footer CSS

--- a/main.css
+++ b/main.css
@@ -189,6 +189,6 @@ header > nav > ul {
     text-align: center;
 }
 
-.bg-one {
+footer {
     text-align: center;
 }
